added vars_files to a new play

--- a/ansible/site.yaml
+++ b/ansible/site.yaml
@@ -2,6 +2,8 @@
 - name: Initial setup as root
   hosts: droplets
   remote_user: root
+  vars_files:
+    - vault.yaml
   roles:
     - create-main-user
 
