--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,3 +1,3 @@
 [droplets]
-droplet1 ansible_user=main ansible_ssh_private_key_file=/Users/alexander/.ssh/DigitalOcean/main
-; droplet1 ansible_user=root ansible_ssh_private_key_file=/Users/alexander/.ssh/DigitalOcean/root
+droplet1-main ansible_host=droplet1 ansible_user=main ansible_ssh_private_key_file=/Users/alexander/.ssh/DigitalOcean/main
+droplet1-root ansible_host=droplet1 ansible_user=root ansible_ssh_private_key_file=/Users/alexander/.ssh/DigitalOcean/root
