--- a/ansible/roles/create-main-user/tasks/main.yaml
+++ b/ansible/roles/create-main-user/tasks/main.yaml
@@ -14,4 +14,4 @@
 - name: Set password for non-root user
   user:
     name: main
-    password: "{{ main_user_password }}"
+    password: "{{ main_user_password | password_hash('sha512') }}"
