become root password added to inventory.yaml

--- a/ansible/site.yaml
+++ b/ansible/site.yaml
@@ -1,11 +1,11 @@
 ---
 
-# - name: Initial setup as root
-#   hosts: droplet1-root
-#   vars_files:
-#     - vault.yaml
-#   roles:
-#     - create-main-user
+- name: Initial setup as root
+  hosts: droplet1-root
+  vars_files:
+    - vault.yaml
+  roles:
+    - create-main-user
 
 
 - name: Full site setup
