--- a/k3s/nfs-pv-pvc.yaml
+++ b/k3s/nfs-pv-pvc.yaml
@@ -9,8 +9,8 @@ spec:
     - ReadWriteMany
   storageClassName: local-path
   nfs:
-    server: 192.168.236.172
-    path: /home/vagrant/Code/Video-streaming-app/exports
+    server: ${NFS_SERVER_IP}
+    path: /home/main/Video-streaming-app/exports
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
