--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ k3s/app-configmap.yaml
 # k3s/letsencrypt-clusterissuer.yaml
 # k3s/app-certificate.yaml
 k3s/deploy-sequence.md
+k3s/deployment-check.md
 ansible/nfs-server-instructions.txt
 ansible/ansible-commands.txt
 ansible/ansible-to-do-list.md
