--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,9 +2,9 @@ version: '3.8'
 services:
   redis:
     image: "redis:7.2-alpine"
-    container_name: redis
+    container_name: redis-container
     ports:
-      - "6379:6379"
+      - "6380:6379"
     restart: unless-stopped
     volumes:
       - /data
